k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect4-server
  labels:
    app: connect4-server
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 3000
  selector:
    app: connect4-server
