k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connect4-server
spec:
  rules:
  - host: "connect4-server.dreamteam.hgopteam.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connect4-server
            port:
              number: 8000
